SigmaCodebackup3rdSep/objects/Vendor_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Buying_Price__c</fullName>
        <label>Buying Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Via__c</fullName>
        <label>Contact Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone_Inquiry</fullName>
                    <label>Phone Inquiry</label>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Rating__c</fullName>
        <formula>( Stock_Recieving_Received_Quantity__c / Order_Quantity__c )* $CustomMetadata.Vendor_Rating_System__mdt.Rating.Delivery_Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descriptions__c</fullName>
        <label>Description</label>
        <length>36000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>TEXT(  FLOOR(Stock_Recieving_Received_Date__c  -  PO_Expected_Date__c)  )  &amp; &quot;Day(s)&quot; &amp; 
TEXT( FLOOR(MOD( ( Stock_Recieving_Received_Date__c  -  PO_Expected_Date__c ) * 24,24)) )  &amp; &quot;Hour(s)&quot; &amp; 
TEXT(ROUND(MOD( ( Stock_Recieving_Received_Date__c  -  PO_Expected_Date__c ) * 1440,60),0))  &amp; &quot;Minute(s)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Expected_Date__c</fullName>
        <label>PO Expected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Selling_Price__c</fullName>
        <label>Product Selling Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vendor Evaluations</relationshipLabel>
        <relationshipName>Vendor_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Product</label>
        <referenceTo>Purchase_Order_Product__c</referenceTo>
        <relationshipLabel>Vendor Evaluations</relationshipLabel>
        <relationshipName>Vendor_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Vendor Evaluations</relationshipLabel>
        <relationshipName>Vendor_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Equipment Design</fullName>
                </value>
                <value>
                    <fullName>Break Down</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Receiving_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Receiving Product</label>
        <referenceTo>Stock_In_Product__c</referenceTo>
        <relationshipLabel>Vendor Evaluations</relationshipLabel>
        <relationshipName>Vendor_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Receiving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Receiving</label>
        <referenceTo>Stock_In__c</referenceTo>
        <relationshipLabel>Vendor Evaluations</relationshipLabel>
        <relationshipName>Vendor_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Recieving_Received_Date__c</fullName>
        <label>Stock Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stock_Recieving_Received_Quantity__c</fullName>
        <label>Stock Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Remaining_Quantity__c</fullName>
        <formula>Order_Quantity__c  -   Stock_Recieving_Received_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Remaining Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Name1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <valueField>Account.RecordType.DeveloperName</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Evaluations</relationshipLabel>
        <relationshipName>Vendor_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Response__c</fullName>
        <label>Vendor Responsiveness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Not Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vendor Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delivery_Rating__c</columns>
        <columns>Vendor_Name1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VE-{0000}</displayFormat>
        <label>Vendor Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Evaluations</pluralLabel>
    <recordTypes>
        <fullName>Vendor_Details</fullName>
        <active>true</active>
        <label>Vendor Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Rating</fullName>
        <active>true</active>
        <label>Vendor Rating</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>